--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,8 @@ ink_storage = { version = "3.0.0-rc9", default-features = false }
 ink_lang = { version = "3.0.0-rc9", default-features = false }
 ink_prelude = { version = "3.0.0-rc9", default-features = false }
 pink-extension = { version = "0.1.5", default-features = false }
-
+fixed = { version = "1.15.0", default-features = false }
+fixed-macro = { version = "1.1.1", default-features = false }
 
 [dev-dependencies]
 image = "0.23"
